# Minipacked

./: Cargo.toml  LICENSE  README.md  flake.nix
packaging/aur/: .SRCINFO  PKGBUILD
packaging/homebrew/: minipacked.rb
packaging/nix/: package.nix
src/: app.rs  archive.rs  args.rs  constants.rs  crypto.rs  format.rs  lib.rs  main.rs  progress.rs  prompt.rs
