[package]
name = "minipacked"
version = "0.1.0"
edition = "2024"
description = "Portable encrypted packer and unpacker for files and directories"
license = "MIT"
readme = "README.md"
repository = "https://github.com/FlyInMyEye/Minipacked"
homepage = "https://github.com/FlyInMyEye/Minipacked"
keywords = ["encryption", "archive", "cli", "backup"]
categories = ["command-line-utilities", "cryptography", "compression"]

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std", "stream"] }
indicatif = "0.17"
rand = "0.8"
rpassword = "7.3"
tar = "0.4"
walkdir = "2.5"
zstd = "0.13"

[[bin]]
name = "minipack"
path = "src/bin/minipack.rs"

[[bin]]
name = "miniunpack"
path = "src/bin/miniunpack.rs"
